--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.3",
-    "dotenv": "^16.4.7"
+    "bip39": "^3.1.0",
+    "dotenv": "^16.4.7",
+    "ethereumjs-wallet": "^1.0.2",
+    "react-toastify": "^11.0.5"
   }
 }
